# mms-obsidian

./: .eslintignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  FileBrowserView.tsx  FileGraph.ts  FolgemoveModal.ts  FollowUpModal.ts  README.md  ReactView.tsx  RenameModal.ts  RenameSymbolsModal.ts  TODO.md  bugs.md  esbuild.config.mjs  fix_instructions.txt  main.ts  manifest.json  package-lock.json  package.json  penman.js  styles.css  test.html  tsconfig.json  utils.ts
archived_code/: package-lock.json  package.json  preload.js  renderer.js  styles.css
archived_code/python/: pyproject.toml
archived_code/python/tests/: conftest.py  test_combined_hierarchy.py  test_directed_file_graph.py  test_file_ops.py  test_graph_manager.py  test_nonid_graph.py  test_orphan_adoption.py  test_server.py  test_utils.py  test_zettelrename.py
archived_code/python/zettelfiles/: __init__.py  adopt_orphans.py  atomic_ops.py  directed_file_graph.py  error_handling.py  file_graph.py  file_manager.py  file_operations.py  get_hierarchy.py  graph_manager.py  models.py  server.py  utils.py  zettelrename.py
archived_code/python/zettelfiles.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
